# async-swirl

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: check.yml
integration_tests/: Cargo.toml
integration_tests/tests/: codegen.rs  db.rs  runner.rs  test_guard.rs
migrations/2018-05-03-150523_create_jobs/: down.sql  up.sql
swirl/: Cargo.toml
swirl/example/: Cargo.toml
swirl/example/src/: main.rs
swirl/src/: db.rs  errors.rs  job.rs  lib.rs  registry.rs  runner.rs  schema.rs  storage.rs
swirl/src/runner/: event.rs
swirl_proc_macro/: Cargo.toml
swirl_proc_macro/src/: background_job.rs  lib.rs
