cargo-features = ["edition2021"]

[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
edition = "2021"
autotests = false

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "6eae69f3e60b45c383927336b48b6ee860a71e00", features = ["postgres"] }
swirl = { path = "../swirl" }
lazy_static = "1.0.0"
dotenv = "0.15"
antidote = "1.0.0"
assert_matches = "1.5"
failure = { version = "0.1", features = ["backtrace"] }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = ["swirl/nightly"]
